# agent-dri-skills

./: .claude-plugin  .gitignore  CLAUDE.md  PLANS.md  README.md
.claude-plugin/: .plugin  marketplace.json
.claude/commands/: code-review.md  design-review.md  eng-feasibility.md  multi-agent-design.md  system-design-review.md
skills/code/: SKILL.md
skills/eng-feasibility/: SKILL.md
skills/eng-feasibility-workspace/iteration-1/: benchmark.json  benchmark.md
skills/eng-feasibility-workspace/iteration-1/eval-0-snowflake-mcp-spike/: eval_metadata.json
skills/eng-feasibility-workspace/iteration-1/eval-0-snowflake-mcp-spike/with_skill/: grading.json  timing.json
skills/eng-feasibility-workspace/iteration-1/eval-0-snowflake-mcp-spike/without_skill/: grading.json  timing.json
skills/eng-feasibility-workspace/iteration-1/eval-0-snowflake-mcp-spike/without_skill/outputs/: .env.example  README.md  RISKS.md  equivalence.py  mcp_server.py  pyproject.toml  rewriter.py  snowflake_client.py  test_rewriter.py
skills/eng-feasibility-workspace/iteration-1/eval-0-snowflake-mcp-spike/without_skill/outputs/fixtures/: expensive_join.sql  explain_plan.json  rewritten_expected.sql
skills/eng-feasibility-workspace/iteration-1/eval-1-llm-recommender-pipeline/: eval_metadata.json
skills/eng-feasibility-workspace/iteration-1/eval-2-git-status-cli/: eval_metadata.json
skills/eng-feasibility/evals/: evals.json
skills/multi-agent-design/: SKILL.md
skills/staff/system-design-review/: SKILL.md  progress.md
skills/system-design-review/: SKILL.md
(+34 files in other folders)
