[project]
name = "snowflake-mcp-spike"
version = "0.0.1"
description = "Day-0 spike: MCP server exposing Snowflake with an LLM SQL rewriter."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "snowflake-connector-python>=3.12.0",
    "sqlglot>=25.0.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
